2008-09-22  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-picker-button.c (hildon_picker_button_set_active):
	Fix memory leak

2008-09-19  Claudio Saavedra  <csaavedra@igalia.com>

	* po/Makefile.am: Install properly the mo files.
	* po/en_GB.po: Update translation, to ease testing purposes.

2008-09-19  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-picker-button-example.c: (main): Select an item
	in the selector before setting it to the button.

2008-09-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_set_selector):
	Update button's value if the selector has an item active.

	Fixes: NB#88718 (HildonPickerButton not synchronizing its initial
	'value' with the selector)

2008-09-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (+hildon_picker_button_finalize): unref
	the HildonTouchSelector	and destroy the underlying HildonPickerDialog.
	(hildon_picker_button_class_init): Plug the finalize method.
	(hildon_picker_button_set_selector): If there's a previously set
	selector, unref'it before setting a new one.

	Fixes: NB#88720 (HildonPickerButton leaks a reference to the
	HildonTouchSelector)

2008-09-16  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c:
	(hildon_touch_selector_entry_changed): Check if there is no text
	selected before setting the entry text.
	Fixes: NB#88576

2008-09-15  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-touch-selector.h
	* src/hildon-touch-selector.c
	(hildon_touch_selector_get_active)
	(hildon_touch_selector_set_active): New methods to set/get the
	index of the selected item.

	* src/hildon-picker-button.h
	* src/hildon-picker-button.c
	(hildon_picker_button_get_active)
	(hildon_picker_button_set_active): New methods to set/get the
	index of the selected item.

2008-09-15  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post-release version bump.
