@@ -1,3 +1,8 @@
+2008-09-22  Claudio Saavedra  <csaavedra@igalia.com>
+
+	* examples/hildon-text-view-example.c: (main): Remove the
+	gtkrc bits, now handled by the theme.
+
 2008-09-22  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/hildon-picker-button.c (hildon_picker_button_set_active):
